# idmail

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  tailwind.config.js
.github/workflows/: check-flake.yml
migrations/: 20240423000000_create_schema.sql
nix/nixosModules/: idmail.nix
nix/tests/: idmail.nix  lib.nix
public/font/: inter.css
src/: aliases.rs  api.rs  app.rs  auth.rs  database.rs  domains.rs  error_template.rs  fileserv.rs  lib.rs  mailboxes.rs  main.rs  provision.rs  users.rs  utils.rs
style/: tailwind.css
