[package]
name = "idmail"
version = "0.1.0"
edition = "2021"
authors = ["oddlama <oddlama@oddlama.org>"]
description = "TODO"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.82"
async-trait = { version = "0.1", optional = true }
axum = { version = "0.7", optional = true, features = ["macros"] }
axum_session = { version = "0.12.4", features = [ "sqlite-rustls", ], optional = true }
axum_session_auth = { version = "0.12.1", features = [ "sqlite-rustls", ], optional = true }
bcrypt = { version = "0.15", optional = true }
console_error_panic_hook = "0.1"
console_log = "1.0"
futures = "0.3"
http = "1.0"
leptos = { version = "0.6", features = ["nightly"] }
leptos-struct-table = "0.9.1"
leptos-use = "0.10"
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
log = "0.4"
rand = { version = "0.8", features = ["min_const_gen"], optional = true }
serde = { version = "1.0", features = ["derive"] }
server_fn = { version = "0.6", features = ["serde-lite"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "sqlite", ], optional = true }
thiserror = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = "0.3.18"
wasm-bindgen = "0.2"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
	"dep:axum",
	"dep:tower",
	"dep:tower-http",
	"dep:tokio",
	"dep:axum_session_auth",
	"dep:axum_session",
	"dep:async-trait",
	"dep:sqlx",
	"dep:bcrypt",
	"dep:rand",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
	"leptos-use/ssr",
	"dep:leptos_axum",
]

[package.metadata.cargo-all-features]
denylist = ["axum", "tower", "tower-http", "tokio", "sqlx", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "idmail"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# The tailwind input file.
tailwind-input-file = "style/tailwind.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "npx playwright test"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]
# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false
# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]
# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
